--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "version": ">=1.0.0",
+  "version": "dev-prod#1.0.1",
   "require": {
-    "omeratagun/phpeasyslack": ">=1.0.0"
+    "omeratagun/phpeasyslack" : "dev-prod#1.0.1"
   },
   "repositories": [
     {
