--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,9 @@
 {
-  "version": "dev-prod#1.0.1",
+  "version": "1.0.1",
   "require": {
-    "omeratagun/phpeasyslack" : "dev-prod#1.0.1"
+    "omeratagun/phpeasyslack" : "1.0.1",
+    "php": ">=5.3.3"
   },
-  "repositories": [
-    {
-      "type": "git",
-      "url": "https://github.com/tyraelll/phpeasyslack/commit/b418c26b964400cac2bb832e36260ec5984353ae"
-    }
-  ],
   "minimum-stability": "dev",
   "name": "omeratagun/phpeasyslack",
   "description": "Easy usage of slack notifications win or linux",
