--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "require": {
     "php": ">=5.3.3"
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "name": "omeratagun/phpeasyslack",
   "description": "Easy usage of slack notifications win or linux",
   "type": "package",
